--- a/css_sheet.css
+++ b/css_sheet.css
@@ -1,19 +1,87 @@
-body {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between; 
-};
+body, html{
+  height:100%;
+  margin:0;
+  font-size:16px;
+  font-family:"Lato", sans-serif;
+  font-weight:400;
+  line-height:1.8em;
+  color:#666;
+  background-color: white;
+}
+
+.container {
+    position: absolute;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 100%;
+}
+
+.nav-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 38px;
+}
+
+.left-side {
+  display: flex;
+}
+
+.right-side{
+  font-size: 16px;
+  font-weight: 550; 
+}
+
+.nav-wrapper > .left-side > div {
+  margin-right: 20px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
+.nav-link-wrapper {
+  height: 22px;
+  border-bottom: 1px solid transparent;
+  transition: border-bottom 0.5s;
+}
+
+.active-nav-link {
+  border-bottom: 1px solid black;
+}
+
+.active-nav-link a {
+  color: black !important;
+}
+
+.nav-link-wrapper a {
+  color: grey;
+  text-decoration: none;
+  transition: color 0.5s;
+}
+
+.nav-link-wrapper:hover {
+  border-bottom: 1px solid black;
+}
+
+.nav-link-wrapper a:hover {
+  color: black;
+}
 
 #tm_div{
   width: 80%;
-  margin-top:0;
-  margin-bottom:0;
-  margin-left:auto;
-  margin-right:auto;
+  margin: 0;
+  margin-left: 25px;
 }
 
 canvas{
   border-radius: 1%;
 };
 
+#tm_text{
+  width:100%;
+  margin-top:0;
+  margin-bottom:0;
+  margin-left:auto;
+  margin-right: auto;
+  padding:2%;
+  height:10%;
+  
+}
